--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -126,10 +126,12 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 #signup h2{color: #cabfb8; font-size: 13px; font-weight: 500; letter-spacing: 3px; margin-bottom: 30px;}
 #signup p{background-color: transparent; font-size: 18px; color: #908075; line-height: 26px; font-weight: 300; margin-bottom: 12px; padding: 0 30px;}
 #signup p b, #signup p strong{color: #68594f;}
-#signup p.loginHere{margin-top: 30px; font-size: 13px;}
+#signup p.loginHere{background:none repeat scroll 0 0 #ECE9E6;font-size:12px;margin:30px 60px;padding:5px;}
 #signup .pad{padding: 0px 0 0 36px;}
-#signup .text{width: 360px; text-align:center; padding-top: 60px; }
+#signup .text{width: 360px; text-align:center; padding-top: 75px; }
 #signup .login, #signup .forgot_password{width: 430px; text-align:center; padding-top: 70px; }
+#signup ul {border-bottom:1px solid #E4DBD3;border-top:1px solid #E4DBD3;margin:20px 40px;padding:20px 0;}
+#signup li {color:#6F5F55;font-size:15px;margin:0 0 5px;}
 
 
 #signup .form{float: right; width: 206px;}
