--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -130,7 +130,7 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 #signup .pad{padding: 0px 0 0 36px;}
 #signup .text{width: 360px; text-align:center; padding-top: 75px; }
 #signup .login, #signup .forgot_password{width: 430px; text-align:center; padding-top: 70px; }
-#signup ul {border-bottom:1px solid #E4DBD3;border-top:1px solid #E4DBD3;margin:20px 40px;padding:20px 0;}
+#signup ul {border-bottom:1px solid #E4DBD3;list-style-type: none; border-top:1px solid #E4DBD3;margin:20px 40px;padding:20px 0;}
 #signup li {color:#6F5F55;font-size:15px;margin:0 0 5px;}
 
 
