--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -8,6 +8,7 @@ body > #wrap {height: auto; min-height: 100%;}
 input[type="button"], input[type="submit"], button {cursor:pointer;}
 a {text-decoration: none }
 a:hover {text-decoration: underline; }
+strong {font-weight: 700}
 
 
  ul {list-style-type: none; border-top:1px solid #392d26;padding-top:20px;}
