--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -109,8 +109,8 @@ div.password-confirm {display: none !important;}
 .messages.error {width: auto; font-size: 11px;}
 .messages.error a{text-decoration:underline;}
 .form-type-checkbox #message_box {float: right; margin-top: 1px;}
-
-label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
+.errorSplashBox {display: none; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000;}
+label.invalid { display: none; margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
 
 #fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {
 border:1px solid #DDDDDD;
