--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -10,6 +10,10 @@ a {text-decoration: none }
 a:hover {text-decoration: underline; }
 strong {font-weight: 700}
 
+.rounded-top {border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
+.rounded-bottom {border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-right-radius: 4px; -moz-border-radius-bottomright: 4px; }
+
+
 
  ul {list-style-type: none; border-top:1px solid #392d26;padding-top:20px;}
  li {font-size:14px;margin:0 0 5px; text-align: center;}
@@ -104,13 +108,14 @@ div.password-confirm {display: none !important;}
 
 
 
-#message_box{ margin: -10px 0 10px; width: 100%; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px;  }
+#message_box{ display: none !important; margin: -10px 0 10px; width: 100%; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px;  }
 #message_box .error, .messages.error  { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
 .messages.error {width: auto; font-size: 11px;}
 .messages.error a{text-decoration:underline;}
 .form-type-checkbox #message_box {float: right; margin-top: 1px;}
-.errorSplashBox {display: none; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000;}
-label.invalid { display: none; margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
+
+.errorSplashBox {display: none; background: url(../images/arrow_error.png) 8px 6px no-repeat; font-size: 11px; text-align: left; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000;}
+label.invalid {  margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
 
 #fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {
 border:1px solid #DDDDDD;
