--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -18,7 +18,7 @@ strong {font-weight: 700}
  ul {list-style-type: none; border-top:1px solid #392d26;padding-top:20px;}
  li {font-size:14px;margin:0 0 5px; text-align: center;}
  
-.button, .form-submit {-moz-border-radius:4px; -webkit-border-radius: 4px; border:medium none;color:#FFFFFF;font-family:"museo-sans-1","museo-sans-2",Helvetica;font-size:12px;font-style:normal;margin:10px 0;padding:6px 12px;}
+.button, .form-submit {-moz-border-radius:4px; -webkit-border-radius: 4px; background:url("../images/b_bg_brown.jpg") repeat scroll left top transparent;border:medium none;color:#FFFFFF;font-family:"museo-sans-1","museo-sans-2",Helvetica;font-size:12px;font-style:normal;margin:10px 0;padding:6px 12px;}
 
 #fb_js_pb{display: none;}
 .form-item input.error {border: 1px solid #CBC1BE}
@@ -40,13 +40,13 @@ h3{color: #8a766b; font-size: 11px; font-family: Georgia, "Times New Roman", Tim
 
 .register {padding:30px 0 0;}
 .register .button {font-size:14px;padding:7px 18px;}
-.red {background: url("../images/b_login.png") no-repeat scroll left top transparent;}
+.red {background-image:url("../images/b_bg_red.jpg");}
 .buttonFB {display:block;margin:25px 0;}
 
 /* registration */
 
 
-.form-text, .form-text-readonly{ color: #000; text-align: left; background: url(../images/bg_field.jpg) top left  repeat-x; height: 23px; line-height:23px; border: 1px solid #cbc1be; padding-left: 4px; width: 230px; margin: 4px 0 2px 0;}
+.form-text, .form-text-readonly{ -moz-border-radius:5px 5px 5px 5px; color: #000; text-align: left; background: url(../images/bg_field.jpg) top left  repeat-x; height: 23px; line-height:23px; border: 1px solid #cbc1be; padding-left: 4px; width: 230px; margin: 4px 0 2px 0;}
 .form-item input:focus { border-color: #BC4038 }
 .form-text.default {color: #72655C;}
 
@@ -114,7 +114,8 @@ div.password-confirm {display: none !important;}
 .messages.error a{text-decoration:underline;}
 .form-type-checkbox #message_box {float: right; margin-top: 1px;}
 
-.errorSplashBox {display: none; background: url("../images/arrow_error.png") 8px 6px no-repeat; font-size: 11px; text-align: left; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000;}
+.errorSplashBox {display: none; background: url("../images/arrow_error.png") 8px 0px no-repeat; font-size: 11px; padding-top: 6px;-moz-border-radius:3px 3px 3px 3px;  width:180px; color: #fff; border: 0px solid #000;}
+.errorSplashBox .error{ -moz-border-radius:3px 3px 3px 3px; text-align: left; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
 label.invalid {  margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
 
 #fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {
