--- a/themes/fadmashion_commerce/css/splash.css
+++ b/themes/fadmashion_commerce/css/splash.css
@@ -49,7 +49,7 @@ body{background: #eae8e6 url("../images/background_white.jpg") center center no-
 
 .content .form-text{background: url(images/bg_form.jpg) top left no-repeat; width: 212px; height: 28px; float: left; margin-right: 10px; color: #a4968f; padding-left: 5px; line-height: 28px; font-size: 13px;}
 
-.buttonSmall{float: left; color: #fff; background: url(images/b_small.png) top left no-repeat; width: 74px; height: 30px; text-decoration: none; text-align:center; line-height: 30px; font-size: 13px;}
+.buttonSmall{float: left; color: #fff; background: url("../images/b_small.png") top left no-repeat; width: 74px; height: 30px; text-decoration: none; text-align:center; line-height: 30px; font-size: 13px;}
 .buttonSmall:hover{background-position: bottom left;}
 
 
