--- a/themes/fadmashion_commerce/css/front_new.css
+++ b/themes/fadmashion_commerce/css/front_new.css
@@ -1,14 +1,10 @@
-
-* {  margin:0; padding:0; border: none; text-align: center; font-family:"museo-sans-1","museo-sans-2", Helvetica; color: #fff;} 
+* { margin:0; padding:0; border: none; font-family:"museo-sans-1","museo-sans-2", Helvetica; color: #fff; } 
 p{color: #fff; font-family: helvetica, arial;}
 html, body, #wrap { height: 100%; }
 body > #wrap {height: auto; min-height: 100%;}
+body{background: #eae8e6 url("../images/background_white.jpg") center center no-repeat;}
 #main { padding-bottom: 36px; }  /* must be same height as the footer */
-#footer {position: relative;margin-top: -36px; background: url(../images/bg.png); height: 36px;clear:both;} 
-input[type="button"], input[type="submit"], button {cursor:pointer;}
-a {text-decoration: none }
-a:hover {text-decoration: underline; }
-strong {font-weight: 700}
+#footer {position: relative;margin-top: -36px; background: #000; height: 36px;clear:both;}
 
 .rounded-top {border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
 .rounded-bottom {border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-right-radius: 4px; -moz-border-radius-bottomright: 4px; }
