--- a/themes/fadmashion_commerce/css/supersized.css
+++ b/themes/fadmashion_commerce/css/supersized.css
@@ -13,12 +13,12 @@ body { background:#111; }
 	
 	#supersized-loader { position:absolute; top:50%; left:50%; z-index:10; width:60px; height:60px; margin:-30px 0 0 -30px; text-indent:-999em; background-color:#111; background:rgba(0,0,0,0.8) url(../images/progress.gif) no-repeat center center; -webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px;}
 	
-	#supersized { position:fixed; left:0; top:0; overflow:hidden; z-index:-999; height:100%; width:100%; }
+	#supersized { position:fixed; left:55%; top:0; overflow:hidden; z-index:-999; height:100%; width:100%; }
 		#supersized img{ width:auto; height:auto; position:relative; display:none; outline:none; border:none; }
 			#supersized.speed img { -ms-interpolation-mode:nearest-neighbor; image-rendering: -moz-crisp-edges; }	/*Speed*/
 			#supersized.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; }			/*Quality*/
 		
-		#supersized a { z-index:-30; position:absolute; overflow:hidden; top:0; left:20%; width:100%; height:100%; background: #eae8e6 url("../images/background_white.jpg") center center no-repeat;}
+		#supersized a { z-index:-30; position:absolute; overflow:hidden; top:0; left:00%; width:100%; height:100%; background: #eae8e6 url("../images/background_white.jpg") center center no-repeat;}
 			#supersized a.prevslide { z-index:-20; }
 			#supersized a.activeslide { z-index:-10; }
 			#supersized a.prevslide img, #supersized a.activeslide img{ display:inline; }
