--- a/themes/fadmashion_commerce/css/splash.css
+++ b/themes/fadmashion_commerce/css/splash.css
@@ -31,17 +31,21 @@ body{background: #eae8e6 url("../images/background_white.jpg") center center no-
 .content ul, .content li{list-style-type:none; text-align: center; color: #514742;}
 .content li{font-family: Georgia, "Times New Roman", Times, serif; font-size: 14px; font-style:italic; font-weight: normal; padding: 3px 0;}
 .content .email{margin-top: 26px;background: #f5f2ef; -webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px; text-align: center; padding: 18px; }
-.content .email p{color: #6b5e58; font-size: 13px; text-align: center; padding-bottom: 14px;}
+.content .email p{color: #6b5e58; font-size: 13px; text-align: center; }
 
 .content .form-text{background: url("../images/bg_form.jpg") top left no-repeat; width: 212px; height: 28px; float: left; margin-right: 10px; color: #a4968f; padding-left: 5px; line-height: 28px; font-size: 13px;}
 
 .content .form-submit{float: left; color: #fff; background: url("../images/b_small.png") top left no-repeat; width: 74px; height: 30px; text-decoration: none; text-align:center; line-height: 30px; font-size: 13px;}
 .content .form-submit:hover{background-position: bottom left;}
 
+#message_box{ display: none !important; margin: -10px 0 10px; width: 100%; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px;  }
+#message_box .error, .messages.error  { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
+.messages.error {width: auto; font-size: 11px;}
+.messages.error a{text-decoration:underline;}
+.form-type-checkbox #message_box {float: right; margin-top: 1px;}
 
-
-.error{font-size: 11px; background: url(images/arrow_error.png) 8px 0px no-repeat; padding-top: 6px; margin-top: 5px; }
-.error .box{background: #C33; padding: 5px; width: 180px;-webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;}
+.errorSplashBox {display: none; background: url("../images/arrow_error.png") 8px 0px no-repeat; font-size: 11px; padding-top: 6px;-moz-border-radius:3px 3px 3px 3px;  width:180px; color: #fff; border: 0px solid #000;}
+.errorSplashBox .error{ -moz-border-radius:3px 3px 3px 3px; text-align: left; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
 
 
 
