--- a/themes/fadmashion_commerce/css/splash.css
+++ b/themes/fadmashion_commerce/css/splash.css
@@ -51,7 +51,7 @@ body{background: #eae8e6 url("../images/background_white.jpg") center center no-
 
 /* footer */
 
-#footer .pad{padding: 0 15px 0 0; line-height: 36px;}
+#footer .footer_pad{padding: 0 15px 0 0; line-height: 36px;}
 #footer .msg{float: right; text-align: right; font-size: 12px; color: #c8b8b0;}
 #footer  a{text-decoration:none; font-size: 12px; color: #fff; }
 #footer .link{padding: 0 16px; border-right: 1px solid #3c2f28; float: left;  }
