--- a/themes/fadmashion_commerce/css/supersized.css
+++ b/themes/fadmashion_commerce/css/supersized.css
@@ -23,7 +23,7 @@ body { background:#111; height:100%; }
       #supersized.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; }     /*Quality*/
     
     #supersized li { display:block; list-style:none; z-index:-30; position:fixed; overflow:hidden; top:0; left:0; width:100%; height:100%; background:#111; }
-    #supersized a { width:100%; height:100%; display:block; }
+    #supersized a { width:100%; height:100%; display:block; background: #eae8e6 url("../images/background_white.jpg") center center no-repeat;}
       #supersized li.prevslide { z-index:-20; }
       #supersized li.activeslide { z-index:-10; }
       #supersized li.image-loading { background:rgba(0,0,0,0.8) url(../images/progress.gif) no-repeat center center; width:100%; height:100%; }
