--- a/themes/fadmashion_commerce/css/supersized.css
+++ b/themes/fadmashion_commerce/css/supersized.css
@@ -15,7 +15,7 @@
 body { background:#111; height:100%; }
   img { border:none; }
   
-  #supersized-loader { position:absolute; top:50%; left:50%; z-index:0; width:60px; height:60px; margin:-30px 0 0 -30px; text-indent:-999em; background:url(../img/progress.gif) no-repeat center center;}
+  #supersized-loader { position:absolute; top:50%; left:50%; z-index:10; width:60px; height:60px; margin:-30px 0 0 -30px; text-indent:-999em; background-color:#111; background:rgba(0,0,0,0.6) url(../images/progress.gif) no-repeat center center; -webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px;}
   
   #supersized {  display:block; position:fixed; left:0; top:0; overflow:hidden; z-index:-999; height:100%; width:100%; }
     #supersized img { width:auto; height:auto; left:55% !important;  position:relative; display:none; outline:none; border:none; }
@@ -26,6 +26,6 @@ body { background:#111; height:100%; }
     #supersized a { width:100%; height:100%; display:block; background: #eae8e6 url("../images/background_white.jpg") center center no-repeat;}
       #supersized li.prevslide { z-index:-20; }
       #supersized li.activeslide { z-index:-10; }
-      #supersized li.image-loading { background:rgba(0,0,0,0.8) url(../images/progress.gif) no-repeat center center; width:100%; height:100%; }
+      #supersized li.image-loading { width:100%; height:100%; }
         #supersized li.image-loading img{ visibility:hidden; }
       #supersized li.prevslide img, #supersized li.activeslide img{ display:inline; }
