--- a/themes/fadmashion_commerce/css/splash.css
+++ b/themes/fadmashion_commerce/css/splash.css
@@ -49,6 +49,7 @@ body{background: #eae8e6 url("../images/background_white.jpg") center center no-
 
 #fm-users-register-intro-form{overflow: hidden;}
 
+.supersized-img {cursor: pointer;}
 
 /* footer */
 
