--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -474,7 +474,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .checkoutPanel label {font-weight: normal}
 .checkoutPanel .header .form-select{position: relative; top: -3px;}
 .checkoutPanel .form-item  { float:left; font-size:13px; padding:0 25px 18px 0; margin: 0;}
-.checkoutPanel .form-item  .form-text { background:url("../images/bg_field.jpg") repeat-x scroll left top transparent; border:1px solid #CBC1BE; height:24px;line-height:24px; margin:4px 0 0; padding-left:4px; width:230px; }
+.checkoutPanel .form-item  .form-text{ background:url("../images/bg_field.jpg") repeat-x scroll left top transparent; border:1px solid #CBC1BE; height:24px;line-height:24px; margin:4px 0 0; padding-left:4px; width:230px; }
 .checkoutPanel .form-select {border:1px solid #CBC1BE; height:26px;line-height:24px; margin-top:4px; width:240px;}
 .checkoutPanel .form-item input:focus { border-color: #BC4038 }
 
@@ -531,10 +531,19 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 	
 #block-fm-commerce-cart-fm-commerce-cart .total {border-top:1px solid #F1EDE8;font-size:15px;margin-top:6px;padding:5px 0 0;text-align:right;}
 
+#fm-commerce-cart-promo-form{overflow: auto; margin-top: 15px; padding-top: 5px; border-top: 1px dotted #888; }
+#fm-commerce-cart-promo-form .form-submit {float: left; margin-left: 10px; margin-top: 14px;}
+#fm-commerce-cart-promo-form .form-item-coupon-code {overflow: hidden; width: 175px; float: left }
+#fm-commerce-cart-promo-form .form-item  .form-text{  border:1px solid #CBC1BE; height:30px; padding-left:4px; width:169px; }
+#fm-commerce-cart-promo-form .form-item  .form-text.default {color: #666;}
+	
 #block-views-nodequeue-1-block h2 {font-size:16px;margin-bottom:8px;}
 #block-views-nodequeue-1-block ul li{margin: 0; background:url("../images/dotted_horizontal.png") repeat-x scroll left top transparent;padding:15px 0; }
 	
 #block-views-nodequeue-1-block ul li .views-field-title a{font-size:14px;margin:0;}
+
+
+
 
 /* Order List*/
 
