--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -9,6 +9,10 @@ a:hover{color: #2e92cc;}
 
 tbody {border: medium none}
 
+.rounded-top {border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
+.rounded-bottom {border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-right-radius: 4px; -moz-border-radius-bottomright: 4px; }
+
+
 /********* header **********/
 
 #header{height: 94px;}
@@ -75,6 +79,15 @@ tbody {border: medium none}
 .quoteClose{background: url(../images/quote_close.png) bottom right no-repeat; color: #2e74a0; font-size: 22px; line-height: 28px; font-style: italic; font-family:"jubilat-1","jubilat-2", Georgia; font-weight: 200;letter-spacing: 1px;}
 .buttonShop{ color: #fff; background: url(../images/b_shop.png) top left no-repeat; width: 156px; height: 36px; text-decoration: none; text-align:center; text-indent: -9999px; display: block; margin: 0 auto}
 .buttonShop:hover{background-position: bottom left;}
+
+.shopAjaxLoader {background-color:rgba(0, 0, 0, 0.7);
+bottom:20px;
+color:#EEEEEE;
+font-size:20px;
+padding:5px;
+position:fixed;
+right:40px;
+text-align:center;}
 
 
 
