--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -49,7 +49,7 @@ tbody {border: medium none}
 #content {padding: 0 0 30px 0;float: left;}
 #content .col1{width: 207px; float: left;}
 	#content .col1 .pad{padding: 30px 20px 0 0;}
-#content .col2{width: 817px; float: left;}
+#content .col2{width: 817px; float: left; position: relative}
 	#content .col2 .pad{padding: 30px 0 0 0;}
 	
 	
@@ -80,7 +80,7 @@ tbody {border: medium none}
 .buttonShop{ color: #fff; background: url(../images/b_shop.png) top left no-repeat; width: 156px; height: 36px; text-decoration: none; text-align:center; text-indent: -9999px; display: block; margin: 0 auto}
 .buttonShop:hover{background-position: bottom left;}
 
-.shopAjaxLoader {background-color:rgba(255, 255, 255, 0.8);background-image: url(../images/confirm-ajax-loader.gif) ;background-position:5px 50%;background-repeat:no-repeat;left: 900px; top:164px;;color:#666;font-size:14px;padding:5px 5px 5px 25px;position:absolute;text-align:center;}
+.shopAjaxLoader {background-color:rgba(255, 255, 255, 0.8);background-image: url(../images/confirm-ajax-loader.gif) ;background-position:5px 50%;background-repeat:no-repeat;left: 372px; top:2px;;;color:#666;font-size:14px;padding:5px 5px 5px 25px;position:absolute;text-align:center;}
 
 
 
